{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 535,
  "lineage": "8a88002a-c230-ba6d-5170-94b64cc0ed43",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "egressgateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0a01d63165a934e1f",
            "vpc_id": "vpc-0b5469f00015a243f"
          },
          "dependencies": [
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "LoadBalancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:526087066082:loadbalancer/LoadBalancer",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "LoadBalancer-1250611276.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "LoadBalancer",
            "idle_timeout": 60,
            "instances": [
              "i-00eef04edb335cd7a",
              "i-01bdda807d3fc8f45",
              "i-04e9c91caea913bd1"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "LoadBalancer",
            "security_groups": [
              "sg-0bea5e77435e77e8d"
            ],
            "source_security_group": "526087066082/RDSSecurityGroup",
            "source_security_group_id": "sg-0bea5e77435e77e8d",
            "subnets": [
              "subnet-01f4fb023254c7bd4"
            ],
            "tags": {
              "Name": "LoadBalancer"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.Webserver1",
            "aws_instance.Webserver2",
            "aws_instance.Webserver3",
            "aws_security_group.RDSSecurityGroup",
            "aws_security_group.SG-WebServer",
            "aws_subnet.Private_Subnet",
            "aws_subnet.Public_Subnet",
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Webserver1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:526087066082:instance/i-01bdda807d3fc8f45",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01bdda807d3fc8f45",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserverkey",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d79ae2d6f60dfbd2",
            "private_dns": "ip-172-31-2-6.ec2.internal",
            "private_ip": "172.31.2.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0844e4b9e641824ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08af7cbdc0a522581",
            "tags": {
              "Name": "Webserver1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08e907b85f9a1c6d5"
            ]
          },
          "dependencies": [
            "aws_security_group.SG-WebServer",
            "aws_subnet.Private_Subnet",
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Webserver2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:526087066082:instance/i-04e9c91caea913bd1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04e9c91caea913bd1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserverkey2",
            "monitoring": false,
            "primary_network_interface_id": "eni-028a22f5a324f9251",
            "private_dns": "ip-172-31-2-7.ec2.internal",
            "private_ip": "172.31.2.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08144bb897ebc911e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08af7cbdc0a522581",
            "tags": {
              "Name": "Webserver2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08e907b85f9a1c6d5"
            ]
          },
          "dependencies": [
            "aws_security_group.SG-WebServer",
            "aws_subnet.Private_Subnet",
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Webserver3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:526087066082:instance/i-00eef04edb335cd7a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-00eef04edb335cd7a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserverkey3",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d6d65f2b2ecb8d2c",
            "private_dns": "ip-172-31-2-8.ec2.internal",
            "private_ip": "172.31.2.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07aac8c8b3335593f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08af7cbdc0a522581",
            "tags": {
              "Name": "Webserver3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08e907b85f9a1c6d5"
            ]
          },
          "dependencies": [
            "aws_security_group.SG-WebServer",
            "aws_subnet.Private_Subnet",
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Fase3Gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0df1d86228b655afc",
            "owner_id": "526087066082",
            "tags": {
              "Name": "Fase3Gateway"
            },
            "vpc_id": "vpc-0b5469f00015a243f"
          },
          "dependencies": [
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "aclFase3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09b33fa2d76cc2e1c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "526087066082",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-01f4fb023254c7bd4",
              "subnet-072ada95dd67d8bb5",
              "subnet-08af7cbdc0a522581",
              "subnet-0f7e78ca7db55a1a2"
            ],
            "tags": {
              "Name": "networkACL"
            },
            "vpc_id": "vpc-0b5469f00015a243f"
          },
          "dependencies": [
            "aws_subnet.Private_Subnet",
            "aws_subnet.Public_Subnet",
            "aws_subnet.RDSSubnet1",
            "aws_subnet.RDSSubnet2",
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-084d711cc39c3d2f2",
            "owner_id": "526087066082",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "eigw-0a01d63165a934e1f",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df1d86228b655afc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "172.32.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df1d86228b655afc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetable"
            },
            "vpc_id": "vpc-0b5469f00015a243f"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.egressgateway",
            "aws_internet_gateway.Fase3Gateway",
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDSSecurityGroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526087066082:security-group/sg-0bea5e77435e77e8d",
            "description": "SecurityGroup for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bea5e77435e77e8d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e907b85f9a1c6d5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDSSecurityGroup",
            "name_prefix": null,
            "owner_id": "526087066082",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDSSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5469f00015a243f"
          },
          "dependencies": [
            "aws_security_group.SG-LoadBalancer",
            "aws_security_group.SG-WebServer",
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-LoadBalancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526087066082:security-group/sg-0b99614920530e1d3",
            "description": "SecurityGroupLoadBalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b99614920530e1d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "SG-LoadBalancer",
            "name_prefix": null,
            "owner_id": "526087066082",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SGLoadBalancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5469f00015a243f"
          },
          "dependencies": [
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-WebServer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526087066082:security-group/sg-08e907b85f9a1c6d5",
            "description": "SecurityGroup for Webservers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e907b85f9a1c6d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b99614920530e1d3"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b99614920530e1d3"
                ],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "SG-WebServer",
            "name_prefix": null,
            "owner_id": "526087066082",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SGWebServer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5469f00015a243f"
          },
          "dependencies": [
            "aws_security_group.SG-LoadBalancer",
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526087066082:subnet/subnet-08af7cbdc0a522581",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.2.0/24",
            "id": "subnet-08af7cbdc0a522581",
            "map_public_ip_on_launch": false,
            "owner_id": "526087066082",
            "tags": {
              "Name": "Private_Subnet"
            },
            "vpc_id": "vpc-0b5469f00015a243f"
          },
          "dependencies": [
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526087066082:subnet/subnet-01f4fb023254c7bd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.1.0/24",
            "id": "subnet-01f4fb023254c7bd4",
            "map_public_ip_on_launch": false,
            "owner_id": "526087066082",
            "tags": {
              "Name": "Public_Subnet"
            },
            "vpc_id": "vpc-0b5469f00015a243f"
          },
          "dependencies": [
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "RDSSubnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526087066082:subnet/subnet-072ada95dd67d8bb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.3.0/24",
            "id": "subnet-072ada95dd67d8bb5",
            "map_public_ip_on_launch": false,
            "owner_id": "526087066082",
            "tags": {
              "Name": "RDSSubnet1"
            },
            "vpc_id": "vpc-0b5469f00015a243f"
          },
          "dependencies": [
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "RDSSubnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526087066082:subnet/subnet-0f7e78ca7db55a1a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.4.0/24",
            "id": "subnet-0f7e78ca7db55a1a2",
            "map_public_ip_on_launch": false,
            "owner_id": "526087066082",
            "tags": {
              "Name": "RDSSubnet2"
            },
            "vpc_id": "vpc-0b5469f00015a243f"
          },
          "dependencies": [
            "aws_vpc.Fase3vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Fase3vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:526087066082:vpc/vpc-0b5469f00015a243f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-059850d80d8a75aca",
            "default_route_table_id": "rtb-08347e3742737477d",
            "default_security_group_id": "sg-04a8638a2626b7761",
            "dhcp_options_id": "dopt-e3dcc398",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b5469f00015a243f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08347e3742737477d",
            "owner_id": "526087066082",
            "tags": {
              "Name": "Fase3vpc"
            }
          }
        }
      ]
    }
  ]
}